--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+body,html{
+  min-height: 100%;
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New' monospace;
